2005-10-12  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/plugin-browser.c: store the installation time in
	the models, not only the string representation. Sort by time, not
	alphabetically. Fixes bug #318652.

2005-10-12  Sven Neumann  <sven@gimp.org>

	* app/base/base-types.h
	* app/base/siox.[ch]: applied patch from Gerald Friedland that
	introduces a state to the SIOX operation.

	* app/core/gimpdrawable-foreground-extract.c: adapted to the new API.

2005-10-11  Michael Natterer  <mitch@gimp.org>

	* libgimpthumb/gimpthumbnail.c: the mime-type is stored in
	"tEXt::Thumb::Mimetype", not in "tEXt::Thumb::Image::Mimetype".
	Fixed this and reordered properties so "tEXt::Thumb" and
	"tEXt::Thumb::Image" stuff is grouped together again.

2005-10-10  Michael Natterer  <mitch@gimp.org>

	* libgimpwidgets/gimpcolorselection.c: added a pick button, it's
	too useful to be just in the color dockable.

2005-10-10  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpviewable.c (gimp_viewable_get_description): set the
	"tooltip" return value to NULL before calling the virtual function.

	* app/core/gimpbrush.c
	* app/core/gimpbuffer.c
	* app/core/gimpchannel.c
	* app/core/gimplayer.c
	* app/core/gimppaintinfo.c
	* app/core/gimppalette.c
	* app/core/gimppattern.c
	* app/core/gimptoolinfo.c (get_description): don't do it here.

	* app/core/gimpbuffer.c
	* app/core/gimppaintinfo.c: untabbify, cleanup.

	* app/core/gimpobject.c: emit "notify::name" whenerver the name
	changes, clenup.

2005-10-09  DindinX  <dindinx@gimp.org>

	* libgimp/gimpzoompreview.c: Enable selection masking, even if it
	looks buggy. It looks to me that the bug is in
	gimp_drawable_get_sub_preview (), not handling the selection drawable
	as a normal drawable.

2005-10-09  DindinX  <dindinx@gimp.org>

	* libgimp/gimpzoompreview.c: better handling of selections and
	navigation popup. Still not perfect.

2005-10-09  DindinX  <dindinx@gimp.org>
